@@ -43,9 +43,6 @@ import os
 import string
 import db
 
-db.setAutoTranslate(False)
-db.setAutoTranslateBE(False)
-
 inputFileName = None
 outputFileName = None
 inputFile = None
